[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = ["ledger",]
omit = ["**/ledger/api.py", "**/ledger/config.py"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "class .*\\bProtocol\\):",
    "def __repr__",
    "def __str__"
]
