[metadata]
name = booker
version = 0.1
author = Sam Thorold
author_email = sam.thorold@gmail.com
description = Bookkeeping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samthorold/booker
project_urls =
    Bug Tracker = https://github.com/samthorold/booker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    flask
    psycopg2-binary
    sqlalchemy
package_dir=
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    coverage[toml]
    black
    mkdocstrings[python-legacy]
    mkdocs-material
    mypy
    requests
